# clt-demo

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  package-lock.json  package.json
.github/workflows/: publish.yml  release.yml
assets/: chart.css  control_panel.css  main.css  reset.css
frontend/: package-lock.json  package.json
frontend/src/components/: button.astro  chart.astro  controls.astro
frontend/src/pages/: index.astro
lib/: Cargo.toml
lib/src/: lib.rs
src/: chart.rs  controls.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: button.astro  chart.astro  controls.astro
src/layouts/: Layout.astro
src/pages/: index.astro
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: engine.rs  lib.rs  main.rs
ui/: app.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
ui/src/: App.svelte  app.css  main.ts  reset.css  types.d.ts
ui/src/components/: controls.tsx  histogram.tsx
ui/src/lib/: Controls.svelte  Histogram.svelte
ui/src/routes/: index.tsx
