[workspace.package]
authors = ["CF Matthee <cmatthee@nmisa.org>"]
description = "A Tauri App"
license = "MIT"
repository = "https://github.com/cfmatthee/clt-demo"

[workspace]
members = ["lib", "tauri"]
resolver = "3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
