[package]
name = "clt-demo"
version = "3.5.0"
edition = "2021"
authors = ["CF Matthee"]
description = "A small application demonstrating the central limit theorem using a Monte Carlo simulation"
license = "MIT"
repository = "https://github.com/cfmatthee/clt-demo"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
lib = { path = "./lib" }

[workspace]
members = ["lib"]
resolver = "3"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
