[package]
name = "dice-mc"
version = "3.0.0"
description = "Demonstrating the Central Limit Theorem using dice and a Monte Carlo simulation"
authors = [
  "CF Matthee <cfmatthee@gmail.com>",
  "CF Matthee <cmatthee@nmisa.org>",
]
license = "Private"
repository = "https://github.com/cfmatthee/dice-mc.git"
default-run = "dice-mc"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
