[package]
name = "clt-demo"
version = "3.4.0"
description = "A Tauri App"
authors = ["CF Matthee <cmatthee@nmisa.org>"]
license = "MIT"
repository = "https://github.com/cfmatthee/clt-demo"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
rand = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"

[dev-dependencies]
approx = "0.5"
