[package]
name = "clt-demo"
version = "3.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "clt_lib"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
lib = { path = "../lib" }
log = "0.4"
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2.7"
